<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/settings_activity_pass_gen">


            <SwitchPreference
                android:defaultValue="@string/DEFAULT_LOWER_GEN"
                android:key="@string/GEN_LOWER_KEY"
                android:title="@string/settings_activity_pass_gen_lower_title"
                android:summary="@string/settings_activity_pass_gen_lower_summary"/>

            <SwitchPreference
                android:defaultValue="@string/DEFAULT_UPPER_GEN"
                android:key="@string/GEN_UPPER_KEY"
                android:title="@string/settings_activity_pass_gen_upper_title"
                android:summary="@string/settings_activity_pass_gen_upper_summary"/>

            <SwitchPreference
                android:defaultValue="@string/DEFAULT_DIGIT_GEN"
                android:key="@string/GEN_DIGIT_KEY"
                android:title="@string/settings_activity_pass_gen_digit_title"
                android:summary="@string/settings_activity_pass_gen_digit_summary"/>

            <SwitchPreference
                android:defaultValue="@string/DEFAULT_SPECIAL_GEN"
                android:key="@string/GEN_SPECIAL_KEY"
                android:title="@string/settings_activity_pass_gen_special_title"
                android:summary="@string/settings_activity_pass_gen_special_summary"/>

            <MultiSelectListPreference
                android:key="@string/GEN_SPECIAL_SPECIFY_KEY"
                android:title="@string/settings_activity_pass_gen_special_specify_title"
                android:summary="@string/settings_activity_pass_gen_special_specify_summary"
                android:entries="@array/settings_activity_pass_gen_special_specify_entries"
                android:entryValues="@array/settings_activity_pass_gen_special_specify_values"
                android:dialogTitle="@string/settings_activity_pass_gen_special_specify_dialog"
                android:dependency="@string/GEN_SPECIAL_KEY"
                android:layout="?android:attr/preferenceLayoutChild"
                android:defaultValue="@array/settings_activity_pass_gen_special_specify_values"/>

            <ListPreference
                android:key="@string/GEN_LENGTH_KEY"
                android:title="@string/settings_activity_pass_gen_length_title"
                android:summary="@string/settings_activity_pass_gen_length_summary"
                android:entries="@array/settings_activity_pass_gen_length_entries_and_values"
                android:entryValues="@array/settings_activity_pass_gen_length_entries_and_values"
                android:dialogTitle="@string/settings_activity_pass_gen_length_dialog"
                android:defaultValue="@string/DEFAULT_PASS_LENGTH"/>


    </PreferenceCategory>

</PreferenceScreen>