<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/settings_activity_general_options">

        <EditTextPreference
            android:key="@string/CLIP_NUMBER_REMOVE_KEY"
            android:title="@string/settings_activity_clipboard_delete_title"
            android:summary="@string/settings_activity_clipboard_delete_summary"
            android:dialogTitle="@string/settings_activity_clipboard_delete_dialog"
            android:defaultValue="@string/DEFAULT_CLIP_NUMBER"/>

        <!--ListPreference
            android:key="@string/ENCRYPTION_KEY_LENGTH_KEY"
            android:title="@string/settings_activity_encryption_key_length_title"
            android:summary="@string/settings_activity_encryption_key_length_summary"
            android:entries="@array/settings_activity_encryption_key_size_entries"
            android:entryValues="@array/settings_activity_encryption_key_size_values"
            android:dialogTitle="@string/settings_activity_encryption_key_length_dialog"
            android:defaultValue="@string/DEFAULT_ENCRYPTION_KEY_LENGTH"/-->

    </PreferenceCategory>

    <!--PreferenceCategory
        android:title="@string/dialog_based_preferences">

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/title_edittext_preference"
            android:summary="@string/summary_edittext_preference"
            android:dialogTitle="@string/dialog_title_edittext_preference" />

        <ListPreference
            android:key="list_preference"
            android:title="@string/title_list_preference"
            android:summary="@string/summary_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:dialogTitle="@string/dialog_title_list_preference" />

    </PreferenceCategory-->

    

    <PreferenceCategory
        android:title="@string/settings_activity_pass_gen">

        <SwitchPreference
            android:defaultValue="@string/DEFAULT_OVERRIDE_GEN"
            android:key="@string/GEN_OVERRIDE_KEY"
            android:title="@string/settings_activity_pass_gen_override_title"
            android:summary="@string/settings_activity_pass_gen_override_summary"/>

        <PreferenceScreen
            android:key="@string/settings_activity_pass_gen"
            android:title="@string/settings_activity_pass_gen_title"
            android:summary="@string/settings_activity_pass_gen_summary"
            android:dependency="@string/GEN_OVERRIDE_KEY">

            <intent android:action="com.erikdeveloper.passvault.PasswordGeneratorOptionsActivity"/>

            <!--SwitchPreference
                android:defaultValue="@string/DEFAULT_LOWER_GEN"
                android:key="@string/GEN_LOWER_KEY"
                android:title="@string/settings_activity_pass_gen_lower_title"
                android:summary="@string/settings_activity_pass_gen_lower_summary"/>

            <SwitchPreference
                android:defaultValue="@string/DEFAULT_UPPER_GEN"
                android:key="@string/GEN_UPPER_KEY"
                android:title="@string/settings_activity_pass_gen_upper_title"
                android:summary="@string/settings_activity_pass_gen_upper_summary"/>

            <SwitchPreference
                android:defaultValue="@string/DEFAULT_DIGIT_GEN"
                android:key="@string/GEN_DIGIT_KEY"
                android:title="@string/settings_activity_pass_gen_digit_title"
                android:summary="@string/settings_activity_pass_gen_digit_summary"/>

            <SwitchPreference
                android:defaultValue="@string/DEFAULT_SPECIAL_GEN"
                android:key="@string/GEN_SPECIAL_KEY"
                android:title="@string/settings_activity_pass_gen_special_title"
                android:summary="@string/settings_activity_pass_gen_special_summary"/>

            <MultiSelectListPreference
                android:key="@string/GEN_SPECIAL_SPECIFY_KEY"
                android:title="@string/settings_activity_pass_gen_special_specify_title"
                android:summary="@string/settings_activity_pass_gen_special_specify_summary"
                android:entries="@array/settings_activity_pass_gen_special_specify_entries"
                android:entryValues="@array/settings_activity_pass_gen_special_specify_values"
                android:dialogTitle="@string/settings_activity_pass_gen_special_specify_dialog"
                android:dependency="@string/GEN_SPECIAL_KEY"
                android:layout="?android:attr/preferenceLayoutChild"
                android:defaultValue="@array/settings_activity_pass_gen_special_specify_values"/>

            <ListPreference
                android:key="@string/GEN_LENGTH_KEY"
                android:title="@string/settings_activity_pass_gen_length_title"
                android:summary="@string/settings_activity_pass_gen_length_summary"
                android:entries="@array/settings_activity_pass_gen_length_entries_and_values"
                android:entryValues="@array/settings_activity_pass_gen_length_entries_and_values"
                android:dialogTitle="@string/settings_activity_pass_gen_length_dialog"
                android:defaultValue="@string/DEFAULT_PASS_LENGTH"/-->


        </PreferenceScreen>
    </PreferenceCategory>

    <!--PreferenceCategory
        android:title="@string/preference_attributes">

        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:title="@string/title_parent_preference"
            android:summary="@string/summary_parent_preference" />

        <!- The visual style of a child is defined by this styled theme attribute. -->
        <!--CheckBoxPreference
            android:key="child_checkbox_preference"
            android:dependency="parent_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/title_child_preference"
            android:summary="@string/summary_child_preference" />

    </PreferenceCategory-->

    <PreferenceCategory
        android:title="@string/settings_activity_db_title">

        <SwitchPreference
            android:defaultValue="@string/DEFAULT_PURGE_DB"
            android:key="@string/DB_PURGE_ON_DELETE_KEY"
            android:title="@string/settings_activity_db_delete_title"
            android:summary="@string/settings_activity_db_delete_summary"/>

        <ListPreference
            android:key="@string/DB_REVISION_HISTORY_KEY"
            android:title="@string/settings_activity_db_rev_title"
            android:summary="@string/settings_activity_db_rev_summary"
            android:entries="@array/settings_activity_db_revision_entries_and_values"
            android:entryValues="@array/settings_activity_db_revision_entries_and_values"
            android:dialogTitle="@string/settings_activity_db_rev_dialog"
            android:defaultValue="@string/DEFAULT_REV_DB"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_activity_sync">

        <PreferenceScreen
            android:title="@string/settings_activity_sync_config_title"
            android:summary="@string/settings_activity_sync_config_summary">
            <intent android:action="com.erikdeveloper.passvault.SyncActivity"/>
        </PreferenceScreen>


        <!--EditTextPreference
            android:key="@string/SYNC_URL_KEY"
            android:title="@string/settings_activity_sync_url_title"
            android:summary="@string/settings_activity_sync_url_summary"
            android:dialogTitle="@string/settings_activity_sync_url_dialog"
            android:defaultValue="@string/DEFAULT_SYNC_URL"/>

        <EditTextPreference
            android:key="@string/SYNC_PORT_KEY"
            android:title="@string/settings_activity_sync_port_title"
            android:summary="@string/settings_activity_sync_port_summary"
            android:dialogTitle="@string/settings_activity_sync_port_dialog"
            android:defaultValue="@string/DEFAULT_SYNC_PORT"/>

        <EditTextPreference
            android:key="@string/SYNC_PROTOCOL_KEY"
            android:title="@string/settings_activity_sync_protocol_title"
            android:summary="@string/settings_activity_sync_protocol_summary"
            android:dialogTitle="@string/settings_activity_sync_protocol_dialog"
            android:defaultValue="@string/DEFAULT_SYNC_PROTOCOL"/>

        <EditTextPreference
            android:key="@string/SYNC_BUCKET_KEY"
            android:title="@string/settings_activity_sync_bucket_title"
            android:summary="@string/settings_activity_sync_bucket_summary"
            android:dialogTitle="@string/settings_activity_sync_bucket_title"
            android:defaultValue="@string/DEFAULT_SYNC_BUCKET"/-->

        <!--EditTextPreference
            android:key="@string/SYNC_BUCKET_PASSWORD_KEY"
            android:title="@string/settings_activity_sync_bucket_password_title"
            android:summary="@string/settings_activity_sync_bucket_password_summary"
            android:dialogTitle="@string/settings_activity_sync_bucket_password_title"
            android:password="true"/-->

        <!--SwitchPreference
            android:defaultValue="@string/DEFAULT_OVERRIDE_SYNC_CREDENTIALS"
            android:key="@string/SYNC_OVERRIDE_CREDENTIALS_KEY"
            android:title="@string/settings_activity_sync_user_override_title"
            android:summary="@string/settings_activity_sync_user_override_summary"/>

        <EditTextPreference
            android:key="@string/SYNC_USER_KEY"
            android:title="@string/settings_activity_sync_user_title"
            android:summary="@string/settings_activity_sync_user_summary"
            android:dialogTitle="@string/settings_activity_sync_user_dialog"
            android:defaultValue="@string/DEFAULT_SYNC_USER"
            android:dependency="@string/SYNC_OVERRIDE_CREDENTIALS_KEY"/>

        <EditTextPreference
            android:key="@string/SYNC_PASS_KEY"
            android:title="@string/settings_activity_sync_pass_title"
            android:summary="@string/settings_activity_sync_pass_summary"
            android:dialogTitle="@string/settings_activity_sync_pass_dialog"
            android:password="true"
            android:dependency="@string/SYNC_OVERRIDE_CREDENTIALS_KEY"/-->




    </PreferenceCategory>

</PreferenceScreen>