<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/add_account_activity_account_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/add_account_activity_account_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_account_activity_account_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/add_account_activity_account_name_hint"
        android:nextFocusDown="@+id/add_account_activity_user_name_edittext"
        android:editable="false"
        android:singleLine="true" />

    <TextView
        android:id="@+id/add_account_activity_user_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/add_account_activity_user_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_account_activity_user_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/add_account_activity_user_name_hint"
        android:nextFocusDown="@+id/add_account_activity_generate_password_button"
        android:singleLine="true" />

    <TextView
        android:id="@+id/add_account_activity_account_password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/add_account_activity_account_password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_account_activity_account_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:password="true"
        android:hint="@string/add_account_activity_account_password_hint"/>
    <!--android:nextFocusDown="@id/add_account_activity_create_button"/-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/add_account_activity_generate_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_account_activity_generate_password_button"/>
        <!--android:nextFocusDown="@id/add_account_activity_create_button"/-->

        <Button
            android:id="@+id/add_account_activity_override_default_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_account_activity_override_default_button"
            android:nextFocusLeft="@id/add_account_activity_generate_password_button"/>

    </LinearLayout>

    <Button
        android:id="@+id/update_account_activity_update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/update_account_activity_update_button" />

</LinearLayout>